<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/btn_register_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/txt_register_book"
        android:backgroundTint="@color/color_btn_register_book"/>

    <Button
        android:id="@+id/btn_register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/txt_register_user"
        android:backgroundTint="@color/color_btn_register_user"/>

    <Button
        android:id="@+id/btn_borrow_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/txt_borrow_return_book"
        android:backgroundTint="@color/color_btn_borrow_return"/>

    <Button
        android:id="@+id/btn_query_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/txt_user_book_query"
        android:backgroundTint="@color/color_btn_query_data"/>

</LinearLayout>