<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.BorrowReturnActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/color_btn_borrow_return"
        android:textAlignment="center"
        android:text="@string/txt_borrow_return"/>

    <EditText
        android:id="@+id/edt_bookISBN_br"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/txt_book_isbn"/>

    <EditText
        android:id="@+id/edt_userId_br"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/txt_user_id"/>

    <Button
        android:id="@+id/btn_borrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/txt_borrow"
        android:textSize="30sp"
        android:backgroundTint="@color/color_btn_borrow_return"/>

    <Button
        android:id="@+id/btn_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/txt_return"
        android:textSize="30sp"
        android:backgroundTint="@color/color_btn_borrow_return"/>

    <TextView
        android:id="@+id/txt_borrow_return_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text=""/>
</LinearLayout>