<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.BookRegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/color_btn_register_book"
        android:textAlignment="center"
        android:text="@string/txt_register_book"/>

    <EditText
        android:id="@+id/edt_bookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/txt_book_name"/>

    <EditText
        android:id="@+id/edt_bookISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/txt_book_isbn"/>

    <Button
        android:id="@+id/btn_register_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/txt_submit"
        android:textSize="30sp"
        android:backgroundTint="@color/color_btn_register_book"/>

    <TextView
        android:id="@+id/txt_register_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text=""/>
</LinearLayout>